✨ feat(datasophon-common, datasophon-worker): 增加命令类属性和日志服务优化
变更内容：
1. 在`ExecuteCmdCommand`和`FileOperateCommand`中新增`commandId`、`timeout`、`commandType`、`operateType`、`sourcePath`和`targetPath`属性，以支持更丰富的命令功能。
2. 在`GetLogCommand`中新增`lines`属性，增强日志获取功能。
3. 在`LogService`中优化日志行处理逻辑，使用`removeFirst()`替代`remove(0)`，提升代码可读性。
4. 在`UnixGroupService`和`UnixUserService`中统一`getGroupname()`和`getUsername()`方法为`getGroupName()`和`getUsername()`，确保命名一致性。

效果：
- 提升了命令类的功能性和日志服务的可读性，增强了系统的灵活性和可维护性。